[gd_scene load_steps=7 format=3 uid="uid://biaethuog3gva"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_7pnli"]
[ext_resource type="Texture2D" uid="uid://dxg1ndrlpsgnb" path="res://Assets/cutscenes/cutscene_gameover.png" id="2_vchq0"]
[ext_resource type="Texture2D" uid="uid://cbtslxh17k8vc" path="res://Assets/UI/gameover_text.png" id="3_2ohtv"]
[ext_resource type="AudioStream" uid="uid://c35847mf0bw82" path="res://Assets/audio/gameOver.mp3" id="3_e1wm8"]
[ext_resource type="Texture2D" uid="uid://wqy8aj150gx3" path="res://Assets/UI/play.png" id="3_lw1hc"]
[ext_resource type="Texture2D" uid="uid://c3a27bt646bix" path="res://Assets/UI/quit.png" id="4_dag40"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_7pnli")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_vchq0")

[node name="Sprite2D" type="Sprite2D" parent="background"]
position = Vector2(18, -18)
texture = ExtResource("3_2ohtv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e1wm8")
autoplay = true

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 21.0
offset_top = 386.0
offset_right = 388.0
offset_bottom = 548.0
size_flags_vertical = 6
texture_normal = ExtResource("3_lw1hc")
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 1515.0
offset_top = 391.0
offset_right = 1882.0
offset_bottom = 553.0
size_flags_vertical = 6
texture_normal = ExtResource("4_dag40")
stretch_mode = 0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
